# attnarc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
benches/: jit_micro.rs  tpch.rs
benchmarks/: create_synthetic_qwen2.py  pytorch_add_rms_norm.py  pytorch_rms_norm.py  vllm_engine_add_rms_norm.py  vllm_engine_greedy_logprobs.py  vllm_engine_rope_paged_kv.py  vllm_engine_speculative_decode.py  vllm_fp8_kv_system.py  vllm_greedy_sample_logprobs.py  vllm_ir_add_rms_norm.py  vllm_rms_norm_dynamic_fp8.py  vllm_rope_paged_kv.py  vllm_silu_and_mul.py  vllm_silu_and_mul_dynamic_fp8.py
bridge/: quillcache_v1_connector.py
crates/loom-cuda/: Cargo.toml  README.md
crates/loom-cuda-bridge/: README.md
crates/loom-cuda-sys/: Cargo.toml  README.md  build.rs
crates/loom-cuda-sys/cuda/include/: loom_cuda.h
crates/loom-cuda-sys/cuda/src/: rope_paged_kv.cu  silu_and_mul.cu  silu_and_mul_quant.cu
crates/loom-cuda-sys/src/: lib.rs
crates/loom-cuda/benches/: add_rms_norm.rs  rms_norm.rs  rms_norm_dynamic_fp8.rs  silu_and_mul.rs  silu_and_mul_dynamic_fp8.rs
crates/loom-cuda/examples/: rust_cuda_smoke.rs
crates/loom-cuda/src/: activation.rs  attention.rs  backend.rs  cuda_backend.rs  greedy_sample.rs  lib.rs  logits.rs  norm.rs  paged_decode.rs  rms_norm.rs  rope_kv.rs  rope_kv_dispatch.rs  runtime.rs  sampling.rs  silu_and_mul.rs  speculative.rs
crates/loom-kernels/: Cargo.toml  README.md
crates/loom-kernels/src/: lib.rs  rope_kv.rs
crates/loom-kernels/src/tests/: activation_tests.rs  attention_tests.rs  contract_tests.rs  logits_tests.rs  mod.rs  norm_tests.rs  rope_kv_tests.rs  sampling_tests.rs  speculative_tests.rs
crates/quill-runtime/: Cargo.toml
crates/quill-runtime/src/: array.rs  eval.rs  group.rs  kernel.rs  lib.rs  record.rs  sum.rs  tests.rs  value.rs
crates/quillcache-gateway/: Cargo.toml
cuda/include/: loom_cuda.h
cuda/src/: add_rms_norm.cu  greedy_sample.cu  paged_decode_attention.cu  rms_norm.cu  rms_norm_quant.cu
deploy/: modal_cuda_p2p.py  modal_vllm_connector.py  modal_vllm_disagg.py  modal_vllm_pd.py
docs/: README.md  architecture.md  co-scheduler-design.md  compatibility.md  mvp-runbook.md  mvp.md  operator-catalog.md  real-engine-pool.md  roadmap.md  status.md  transfer-line-design.md  two-gpu-route-q.md  vllm-local-backend.md
docs/design/: code-layout.md  fp8-kv-cache.md  greedy-speculative-verify.md  operator-library.md  paged-decode-attention.md
docs/guides/: two-gpu-route-q.md  vllm-ir-provider.md
docs/results/: README.md  h20-add-rms-norm-20260721.json  h20-greedy-sample-logprobs-20260722.json  h20-greedy-speculative-verify-20260723.json  h20-libtorch-stable-abi-20260723.json  h20-native-wheel-clean-install-20260723.json  h20-paged-decode-attention-20260722.json  h20-rms-norm-dynamic-fp8-20260721.json  h20-rms-norm-f32-smoke-20260721.json  h20-rms-norm-low-precision-20260721.json  h20-silu-and-mul-20260721.json  h20-silu-and-mul-dynamic-fp8-20260721.json  h20-vllm-greedy-logprobs-baseline-first-20260722.json  h20-vllm-greedy-logprobs-loom-first-20260722.json  (+3 more)
docs/src/: benchmarks.md  (+1 more)
python/: README.md  build_native.py  build_torch_extension.py  build_wheel.py  pyproject.toml
python/csrc/: activation.cpp  attention.cpp  common.h  logits.cpp  norm.cpp  rope_kv.cpp  sampling.cpp  speculative.cpp  telemetry.cpp  torch_ops.cpp
python/loom_attention/: two_gpu_smoke.py
python/quillcache_engine/: vllm_smoke.py
python/src/loom_kernels/: __init__.py  _native.py  _torch_extension.py  torch_ops.py  vllm.py
python/src/loom_kernels/ops/: norm.py  rope_kv.py  sampling.py
python/src/loom_kernels/vllm/: __init__.py  _runtime.py  activation.py  attention.py  logits.py  rope_kv.py  sampling.py  speculative.py
python/tests/: test_greedy_sample_logprobs.py  test_paged_decode_attention.py  test_rope_paged_kv.py  test_silu_and_mul.py  test_silu_and_mul_dynamic_fp8.py  test_torch_ops.py  test_two_gpu_smoke.py  test_vllm_ir.py  test_vllm_smoke.py
python/tests/integration/: modal_two_gpu.py  two_gpu_benchmark.py  two_gpu_smoke.py
src/: gateway.rs  main.rs  pd.rs  pd_proxy.rs
tests/: df_arrow_parquet.rs
web/: astro.config.mjs
website/: astro.config.mjs  package-lock.json  package.json
(+65 files in other folders)
