[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-kernels"
version = "2.0.0a1"
description = "PyTorch and vLLM adapters for the Loom Kernels CUDA backend"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
torch = ["torch>=2.4"]
vllm = ["vllm>=0.24,<0.25"]
test = ["pytest>=8"]

[project.entry-points."vllm.general_plugins"]
loom_kernels = "loom_kernels.vllm:register_vllm_ir"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
