[package]
name = "loom-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe Rust CUDA backend and benchmarks for Loom Kernels"

[features]
default = []
cuda = ["loom-cuda-sys/cuda"]

[dependencies]
clap.workspace = true
half.workspace = true
loom-cuda-sys = { path = "../loom-cuda-sys" }
loom-kernels = { path = "../loom-kernels" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[[bench]]
name = "rms_norm"
harness = false
required-features = ["cuda"]

[[bench]]
name = "add_rms_norm"
harness = false
required-features = ["cuda"]

[[bench]]
name = "rms_norm_dynamic_fp8"
harness = false
required-features = ["cuda"]

[[bench]]
name = "silu_and_mul"
harness = false
required-features = ["cuda"]

[[bench]]
name = "silu_and_mul_dynamic_fp8"
harness = false
required-features = ["cuda"]
