[package]
name = "loom-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Safe Rust CUDA backend for Loom Kernels"
documentation = "https://docs.rs/loom-cuda"
readme = "README.md"
keywords = ["cuda", "gpu", "inference", "llm", "rust"]
categories = ["hardware-support", "science"]

[features]
default = []
cuda = ["loom-cuda-sys/cuda"]

[dependencies]
half.workspace = true
loom-cuda-sys = { version = "1.0.0-alpha.1", path = "../loom-cuda-sys" }
loom-kernels = { version = "1.0.0-alpha.1", path = "../loom-kernels" }
thiserror.workspace = true

[dev-dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[[example]]
name = "rust_cuda_smoke"
required-features = ["cuda"]

[[bench]]
name = "rms_norm"
harness = false
required-features = ["cuda"]

[[bench]]
name = "add_rms_norm"
harness = false
required-features = ["cuda"]

[[bench]]
name = "rms_norm_dynamic_fp8"
harness = false
required-features = ["cuda"]

[[bench]]
name = "silu_and_mul"
harness = false
required-features = ["cuda"]

[[bench]]
name = "silu_and_mul_dynamic_fp8"
harness = false
required-features = ["cuda"]
