[package]
name = "quill-runtime"
version = "0.3.1"
edition = "2021"
description = "Arrow batch runtime and pipeline kernels for QuillSQL"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"

[dependencies]
arrow = { workspace = true }
quill-plan = { version = "0.3.1", path = "../quill-plan" }
